update package export header files

--- a/man/put.taxonomic_group.1
+++ b/man/put.taxonomic_group.1
@@ -1,11 +1,14 @@
 ﻿.TH PUT.TAXONOMIC_GROUP 1 2023-May "" "Create a new taxonomic group in the registry"
 .SH NAME
-put.taxonomic_group \- put.taxonomic_group(name, note)
+put.taxonomic_group \- put.taxonomic_group(name, id, note)
 .SH SYNOPSIS
-\fIput.taxonomic_group(name, note)\fR
+\fIput.taxonomic_group(name, id, note)\fR
 .SH OPTIONS
 .PP
 \fBname\fB \fR\- . 
+.PP
+.PP
+\fBid\fB \fR\- . 
 .PP
 .PP
 \fBnote\fB \fR\- . 
