run package msbuild

--- a/man/get_dblinks.1
+++ b/man/get_dblinks.1
@@ -1,12 +1,12 @@
-﻿.TH GET_DBLINKS 1 2023-Jun "" "get_dblinks"
+﻿.TH GET_DBLINKS 1 2024-Apr "" "get_dblinks"
 .SH NAME
 get_dblinks \- get_dblinks(dbname,
-    <i>page</i> = 1,
-    <i>page.size</i> = 1000)
+    <i>page</i> = <span style='color: green;'>1</span>,
+    <i>page.size</i> = <span style='color: green;'>1000</span>)
 .SH SYNOPSIS
 \fIget_dblinks(dbname,
-    <i>page</i> = 1,
-    <i>page.size</i> = 1000)\fR
+    <i>page</i> = <span style='color: green;'>1</span>,
+    <i>page.size</i> = <span style='color: green;'>1000</span>)\fR
 .SH OPTIONS
 .PP
 \fBdbname\fB \fR\- . 
@@ -22,4 +22,4 @@ get_dblinks \- get_dblinks(dbname,
 SMRUCC/R#.declare_function.get_dblinks at exports.R:line 49
 .PP
 .SH COPYRIGHT
-Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2023
+Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
