--- a/man/pull_motif_family.1
+++ b/man/pull_motif_family.1
@@ -1,10 +1,10 @@
-﻿.TH PULL_MOTIF_FAMILY 1 2023-Jun "" "Fetch all motif family"
+﻿.TH PULL_MOTIF_FAMILY 1 2024-Apr "" "Fetch all motif family"
 .SH NAME
 pull_motif_family \- pull_motif_family(
-    <i>genome.id</i> = <span style='color: blue;'>NULL</span>)
+    <i>genome.id</i> = <span style='color: blue !important;'>NULL</span>)
 .SH SYNOPSIS
 \fIpull_motif_family(
-    <i>genome.id</i> = <span style='color: blue;'>NULL</span>)\fR
+    <i>genome.id</i> = <span style='color: blue !important;'>NULL</span>)\fR
 .SH OPTIONS
 .PP
 \fBgenome.id\fB \fR\- NULL. 
@@ -14,4 +14,4 @@ pull_motif_family \- pull_motif_family(
 SMRUCC/R#.declare_function.pull_motif_family at pull.R:line 21
 .PP
 .SH COPYRIGHT
-Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2023
+Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
