--- a/man/pull_taxonomic.1
+++ b/man/pull_taxonomic.1
@@ -1,10 +1,10 @@
-﻿.TH PULL_TAXONOMIC 1 2023-Jun "" "pull_taxonomic"
+﻿.TH PULL_TAXONOMIC 1 2024-Apr "" "pull_taxonomic"
 .SH NAME
 pull_taxonomic \- pull_taxonomic(
-    <i>id</i> = <span style='color: blue;'>NULL</span>)
+    <i>id</i> = <span style='color: blue !important;'>NULL</span>)
 .SH SYNOPSIS
 \fIpull_taxonomic(
-    <i>id</i> = <span style='color: blue;'>NULL</span>)\fR
+    <i>id</i> = <span style='color: blue !important;'>NULL</span>)\fR
 .SH OPTIONS
 .PP
 \fBid\fB \fR\- NULL. 
@@ -14,4 +14,4 @@ pull_taxonomic \- pull_taxonomic(
 SMRUCC/R#.declare_function.pull_taxonomic at pull.R:line 1
 .PP
 .SH COPYRIGHT
-Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2023
+Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
