--- a/man/put.sequence.1
+++ b/man/put.sequence.1
@@ -1,10 +1,10 @@
-﻿.TH PUT.SEQUENCE 1 2023-Jun "" "put.sequence"
+﻿.TH PUT.SEQUENCE 1 2024-Apr "" "put.sequence"
 .SH NAME
 put.sequence \- put.sequence(gene.id, locus.tag, gene.seq, prot.seq,
-    <i>note</i> = <span style='color: blue;'>NULL</span>)
+    <i>note</i> = <span style='color: blue !important;'>NULL</span>)
 .SH SYNOPSIS
 \fIput.sequence(gene.id, locus.tag, gene.seq, prot.seq,
-    <i>note</i> = <span style='color: blue;'>NULL</span>)\fR
+    <i>note</i> = <span style='color: blue !important;'>NULL</span>)\fR
 .SH OPTIONS
 .PP
 \fBgene.id\fB \fR\- . 
@@ -26,4 +26,4 @@ put.sequence \- put.sequence(gene.id, locus.tag, gene.seq, prot.seq,
 SMRUCC/R#.declare_function.put.sequence at put.R:line 64
 .PP
 .SH COPYRIGHT
-Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2023
+Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
