--- a/man/get_motif_sites.1
+++ b/man/get_motif_sites.1
@@ -1,10 +1,10 @@
-﻿.TH GET_MOTIF_SITES 1 2023-Jun "" "Export motif sites from the biocad registry"
+﻿.TH GET_MOTIF_SITES 1 2024-Apr "" "Export motif sites from the biocad registry"
 .SH NAME
 get_motif_sites \- get_motif_sites(family,
-    <i>fasta</i> = <span style='color: blue;'>FALSE</span>)
+    <i>fasta</i> = <span style='color: blue !important;'>FALSE</span>)
 .SH SYNOPSIS
 \fIget_motif_sites(family,
-    <i>fasta</i> = <span style='color: blue;'>FALSE</span>)\fR
+    <i>fasta</i> = <span style='color: blue !important;'>FALSE</span>)\fR
 .SH OPTIONS
 .PP
 \fBfamily\fB \fR\- . A specific motif family for export data
@@ -17,4 +17,4 @@ get_motif_sites \- get_motif_sites(family,
 SMRUCC/R#.declare_function.get_motif_sites at exports.R:line 14
 .PP
 .SH COPYRIGHT
-Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2023
+Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
