run package msbuild

--- a/man/put.taxonomic_group.1
+++ b/man/put.taxonomic_group.1
@@ -1,8 +1,10 @@
-﻿.TH PUT.TAXONOMIC_GROUP 1 2024-Apr "" "Create a new taxonomic group in the registry"
+﻿.TH PUT.TAXONOMIC_GROUP 1 2024-Aug "" "Create a new taxonomic group in the registry"
 .SH NAME
-put.taxonomic_group \- put.taxonomic_group(name, id, note)
+put.taxonomic_group \- put.taxonomic_group(name, id,
+    <i>note</i> = <span style='color: brown;'><strong>''</strong></span>)
 .SH SYNOPSIS
-\fIput.taxonomic_group(name, id, note)\fR
+\fIput.taxonomic_group(name, id,
+    <i>note</i> = <span style='color: brown;'><strong>''</strong></span>)\fR
 .SH OPTIONS
 .PP
 \fBname\fB \fR\- . 
@@ -11,7 +13,7 @@ put.taxonomic_group \- put.taxonomic_group(name, id, note)
 \fBid\fB \fR\- . 
 .PP
 .PP
-\fBnote\fB \fR\- . 
+\fBnote\fB \fR\- ''. 
 .PP
 .SH VALUE
 .PP
