add description note about vocabulary term

--- a/man/biocad_registry/models/models/vocabulary_id.1
+++ b/man/biocad_registry/models/models/vocabulary_id.1
@@ -5,7 +5,8 @@ vocabulary_id \-
 .SH SYNOPSIS
 \fIvocabulary_id(\fBbiocad_registry\fR as <generic> biocad_registry, 
 \fBterm\fR as string, 
-\fBcategory\fR as string);\fR
+\fBcategory\fR as string, 
+\fBdesc\fR as string = "");\fR
 .SH SEE ALSO
 models
 .SH FILES
