run package msbuikld

--- a/man/imports_genebank.1
+++ b/man/imports_genebank.1
@@ -1,4 +1,4 @@
-﻿.TH IMPORTS_GENEBANK 1 2024-Aug "" "imports_genebank"
+﻿.TH IMPORTS_GENEBANK 1 2024-Aug "" "imports gene from ncbi genbank file"
 .SH NAME
 imports_genebank \- imports_genebank(biocad.registry, genebank)
 .SH SYNOPSIS
@@ -12,7 +12,7 @@ imports_genebank \- imports_genebank(biocad.registry, genebank)
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.imports_genebank at genbank.R:line 3
+SMRUCC/R#.declare_function.imports_genebank at genbank.R:line 5
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
