--- a/man/imports_pubchem.1
+++ b/man/imports_pubchem.1
@@ -1,4 +1,4 @@
-﻿.TH IMPORTS_PUBCHEM 1 2024-Aug "" "imports_pubchem"
+﻿.TH IMPORTS_PUBCHEM 1 2024-Aug "" "imports the reference metabolite set from pubchem database"
 .SH NAME
 imports_pubchem \- imports_pubchem(biocad.registry, pubchem)
 .SH SYNOPSIS
@@ -12,7 +12,7 @@ imports_pubchem \- imports_pubchem(biocad.registry, pubchem)
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.imports_pubchem at pubchem.R:line 5
+SMRUCC/R#.declare_function.imports_pubchem at pubchem.R:line 7
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
