run package document msbuikld

--- a/man/gene_term.1
+++ b/man/gene_term.1
@@ -1,4 +1,4 @@
-﻿.TH GENE_TERM 1 2024-Aug "" "gene_term"
+﻿.TH GENE_TERM 1 2024-Aug "" "get vocabulary term id of ``Nucleic Acid``"
 .SH NAME
 gene_term \- gene_term(biocad.registry)
 .SH SYNOPSIS
@@ -9,7 +9,7 @@ gene_term \- gene_term(biocad.registry)
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.gene_term at biocad_registry.R:line 1
+SMRUCC/R#.declare_function.gene_term at biocad_registry.R:line 2
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
