--- a/man/imports_genebank.1
+++ b/man/imports_genebank.1
@@ -8,11 +8,15 @@ imports_genebank \- imports_genebank(biocad.registry, genebank)
 \fBbiocad.registry\fB \fR\- . 
 .PP
 .PP
-\fBgenebank\fB \fR\- . 
+\fBgenebank\fB \fR\- . A ncbi genebank data object, all CDS/rna features inside this genebank data object will be extract and imports into database.
+.PP
+.SH DETAILS
+.PP
+this function will make association between the gene/rna and uniprot protein molecules.
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.imports_genebank at genbank.R:line 5
+SMRUCC/R#.declare_function.imports_genebank at genbank.R:line 12
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
