--- a/man/open_registry.1
+++ b/man/open_registry.1
@@ -17,17 +17,17 @@ open_registry \- open_registry(user, passwd,
 \fBpasswd\fB \fR\- . 
 .PP
 .PP
-\fBhost\fB \fR\- 'localhost'. 
+\fBhost\fB \fR\- 'localhost'. the mysql server host
 .PP
 .PP
 \fBport\fB \fR\- 3306. 
 .PP
 .PP
-\fBdbname\fB \fR\- 'cad_registry'. 
+\fBdbname\fB \fR\- 'cad_registry'. the database name of the target mysql database, value may be ``cad_registry`` or ``biocad_registry``.
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.open_registry at mysql.R:line 3
+SMRUCC/R#.declare_function.open_registry at mysql.R:line 7
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
