--- a/man/protein_term.1
+++ b/man/protein_term.1
@@ -1,4 +1,4 @@
-﻿.TH PROTEIN_TERM 1 2024-Aug "" "protein_term"
+﻿.TH PROTEIN_TERM 1 2024-Aug "" "get vocabulary term id of ``Polypeptide``"
 .SH NAME
 protein_term \- protein_term(biocad.registry)
 .SH SYNOPSIS
@@ -9,7 +9,7 @@ protein_term \- protein_term(biocad.registry)
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.protein_term at biocad_registry.R:line 9
+SMRUCC/R#.declare_function.protein_term at biocad_registry.R:line 12
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
