--- a/man/rna_term.1
+++ b/man/rna_term.1
@@ -1,4 +1,4 @@
-﻿.TH RNA_TERM 1 2024-Aug "" "rna_term"
+﻿.TH RNA_TERM 1 2024-Aug "" "get vocabulary term id of ``RNA``"
 .SH NAME
 rna_term \- rna_term(biocad.registry)
 .SH SYNOPSIS
@@ -9,7 +9,7 @@ rna_term \- rna_term(biocad.registry)
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.rna_term at biocad_registry.R:line 5
+SMRUCC/R#.declare_function.rna_term at biocad_registry.R:line 7
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
