--- a/man/imports_chebi.1
+++ b/man/imports_chebi.1
@@ -8,11 +8,11 @@ imports_chebi \- imports_chebi(biocad.registry, chebi)
 \fBbiocad.registry\fB \fR\- . 
 .PP
 .PP
-\fBchebi\fB \fR\- . 
+\fBchebi\fB \fR\- . the chebi ontology OBO database, the metabolite compound data will be extract from this database obejct.
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.imports_chebi at chebi.R:line 5
+SMRUCC/R#.declare_function.imports_chebi at chebi.R:line 8
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
