--- a/man/imports_rhea.1
+++ b/man/imports_rhea.1
@@ -1,4 +1,4 @@
-﻿.TH IMPORTS_RHEA 1 2024-Aug "" "imports_rhea"
+﻿.TH IMPORTS_RHEA 1 2024-Aug "" "imports the rhea reaction database"
 .SH NAME
 imports_rhea \- imports_rhea(biocad.registry, rhea)
 .SH SYNOPSIS
@@ -12,7 +12,7 @@ imports_rhea \- imports_rhea(biocad.registry, rhea)
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.imports_rhea at rhea.R:line 1
+SMRUCC/R#.declare_function.imports_rhea at rhea.R:line 3
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
