--- a/man/metabolite_term.1
+++ b/man/metabolite_term.1
@@ -1,4 +1,4 @@
-﻿.TH METABOLITE_TERM 1 2024-Aug "" "metabolite_term"
+﻿.TH METABOLITE_TERM 1 2024-Aug "" "get vocabulary term id of ``Metabolite``"
 .SH NAME
 metabolite_term \- metabolite_term(biocad.registry)
 .SH SYNOPSIS
@@ -9,7 +9,7 @@ metabolite_term \- metabolite_term(biocad.registry)
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.metabolite_term at biocad_registry.R:line 13
+SMRUCC/R#.declare_function.metabolite_term at biocad_registry.R:line 17
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
