run package document msbuild

--- a/man/__push_compound_metadata.1
+++ b/man/__push_compound_metadata.1
@@ -1,4 +1,4 @@
-﻿.TH __PUSH_COMPOUND_METADATA 1 2024-Aug "" "__push_compound_metadata"
+﻿.TH __PUSH_COMPOUND_METADATA 1 2024-Aug "" "save compound metadata"
 .SH NAME
 __push_compound_metadata \- __push_compound_metadata(biocad.registry, compound, mol)
 .SH SYNOPSIS
@@ -8,14 +8,14 @@ __push_compound_metadata \- __push_compound_metadata(biocad.registry, compound, 
 \fBbiocad.registry\fB \fR\- . 
 .PP
 .PP
-\fBcompound\fB \fR\- . 
+\fBcompound\fB \fR\- . the compound metadata
 .PP
 .PP
-\fBmol\fB \fR\- . 
+\fBmol\fB \fR\- . the molecule record about this compound inside current biocad_registry. a ``id`` data property is required inside this molecule record.
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.__push_compound_metadata at pubchem.R:line 54
+SMRUCC/R#.declare_function.__push_compound_metadata at metabolite.R:line 7
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
