run package msbuild

--- a/man/__push_compound_metadata.1
+++ b/man/__push_compound_metadata.1
@@ -15,7 +15,7 @@ __push_compound_metadata \- __push_compound_metadata(biocad.registry, compound, 
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.__push_compound_metadata at metabolite.R:line 7
+SMRUCC/R#.declare_function.__push_compound_metadata at push_compound_metadata.R:line 7
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
