run package msbuild

--- a/man/imports_uniprot.1
+++ b/man/imports_uniprot.1
@@ -1,14 +1,19 @@
 ﻿.TH IMPORTS_UNIPROT 1 2024-Aug "" "helper function for imports uniprot proteins"
 .SH NAME
-imports_uniprot \- imports_uniprot(biocad.registry, uniprot)
+imports_uniprot \- imports_uniprot(biocad.registry, uniprot,
+    <i>fast.check</i> = <span style='color: blue !important;'>FALSE</span>)
 .SH SYNOPSIS
-\fIimports_uniprot(biocad.registry, uniprot)\fR
+\fIimports_uniprot(biocad.registry, uniprot,
+    <i>fast.check</i> = <span style='color: blue !important;'>FALSE</span>)\fR
 .SH OPTIONS
 .PP
 \fBbiocad.registry\fB \fR\- . 
 .PP
 .PP
 \fBuniprot\fB \fR\- . 
+.PP
+.PP
+\fBfast.check\fB \fR\- FALSE. 
 .PP
 .SH FILES
 .PP
