--- a/man/imports_metacyc.1
+++ b/man/imports_metacyc.1
@@ -1,11 +1,18 @@
 ﻿.TH IMPORTS_METACYC 1 2024-Nov "" "helper function for imports the metacyc molecules and reactions"
 .SH NAME
-imports_metacyc \- imports_metacyc()
+imports_metacyc \- imports_metacyc(biocad.registry, metacyc)
 .SH SYNOPSIS
-\fIimports_metacyc()\fR
+\fIimports_metacyc(biocad.registry, metacyc)\fR
+.SH OPTIONS
+.PP
+\fBbiocad.registry\fB \fR\- . 
+.PP
+.PP
+\fBmetacyc\fB \fR\- . 
+.PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.imports_metacyc at metacyc.R:line 3
+SMRUCC/R#.declare_function.imports_metacyc at metacyc.R:line 5
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
