run package msbuild

--- a/man/link_reaction_metabolites.1
+++ b/man/link_reaction_metabolites.1
@@ -1,4 +1,4 @@
-﻿.TH LINK_REACTION_METABOLITES 1 2024-Nov "" "link_reaction_metabolites"
+﻿.TH LINK_REACTION_METABOLITES 1 2024-Nov "" "Set molecule id link"
 .SH NAME
 link_reaction_metabolites \- link_reaction_metabolites(biocad.registry)
 .SH SYNOPSIS
@@ -9,7 +9,7 @@ link_reaction_metabolites \- link_reaction_metabolites(biocad.registry)
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.link_reaction_metabolites at link_reaction_metabolites.R:line 1
+SMRUCC/R#.declare_function.link_reaction_metabolites at link_reaction_metabolites.R:line 3
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
