run package msbuild

--- a/man/imports_sabiork.1
+++ b/man/imports_sabiork.1
@@ -8,11 +8,11 @@ imports_sabiork \- imports_sabiork(biocad.registry, repo)
 \fBbiocad.registry\fB \fR\- . 
 .PP
 .PP
-\fBrepo\fB \fR\- . 
+\fBrepo\fB \fR\- . a character vector of the xml data files for the enzymatic kinetics data
 .PP
 .SH FILES
 .PP
-SMRUCC/R#.declare_function.imports_sabiork at sabiork.R:line 3
+SMRUCC/R#.declare_function.imports_sabiork at sabiork.R:line 5
 .PP
 .SH COPYRIGHT
 Copyright © xieguigang <xie.guigang@gcmodeller.org>, MIT License Licensed 2024
