--- a/man/imports_odor.1
+++ b/man/imports_odor.1
@@ -1,14 +1,19 @@
 ﻿.TH IMPORTS_ODOR 1 2024-Dec "" "imports_odor"
 .SH NAME
-imports_odor \- imports_odor(biocad.registry, pubchem)
+imports_odor \- imports_odor(biocad.registry, pubchem,
+    <i>fast.check</i> = <span style='color: blue !important;'>FALSE</span>)
 .SH SYNOPSIS
-\fIimports_odor(biocad.registry, pubchem)\fR
+\fIimports_odor(biocad.registry, pubchem,
+    <i>fast.check</i> = <span style='color: blue !important;'>FALSE</span>)\fR
 .SH OPTIONS
 .PP
 \fBbiocad.registry\fB \fR\- . 
 .PP
 .PP
 \fBpubchem\fB \fR\- . 
+.PP
+.PP
+\fBfast.check\fB \fR\- FALSE. 
 .PP
 .SH FILES
 .PP
