try to export fasta sequence

--- a/man/export_genomics_fasta.1
+++ b/man/export_genomics_fasta.1
@@ -1,14 +1,19 @@
 ﻿.TH EXPORT_GENOMICS_FASTA 1 2025-Apr "" "export_genomics_fasta"
 .SH NAME
-export_genomics_fasta \- export_genomics_fasta(biocad.registry, parent.taxname)
+export_genomics_fasta \- export_genomics_fasta(biocad.registry, parent.taxname,
+    <i>fasta</i> = <span style='color: blue !important;'>TRUE</span>)
 .SH SYNOPSIS
-\fIexport_genomics_fasta(biocad.registry, parent.taxname)\fR
+\fIexport_genomics_fasta(biocad.registry, parent.taxname,
+    <i>fasta</i> = <span style='color: blue !important;'>TRUE</span>)\fR
 .SH OPTIONS
 .PP
 \fBbiocad.registry\fB \fR\- . 
 .PP
 .PP
 \fBparent.taxname\fB \fR\- . 
+.PP
+.PP
+\fBfasta\fB \fR\- TRUE. 
 .PP
 .SH FILES
 .PP
